--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <p>Hypertext Markup Language (em português, Linguagem de Marcação de Texto)...</p>        
     <h2>CSS</h2>
     <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
+    <img src="Imagem/Olá Mundo (1).png" alt="texto alternativo">
+
   </section> 
+
   <footer>
 
 <p>Uma página desenvolvida por Alura Start</p>
