--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
   <section>
     <h2>HTML</h2>
-    <p>Hypertext Markup Language (em português, Linguagem de Marcação de Texto)...</p>        
+    <p class="texto-inglês">Hypertext Markup Language (em português, Linguagem de Marcação de Texto)...</p>        
     <h2>CSS</h2>
     <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
     <img src="Imagem/Olá Mundo (1).png" alt="texto alternativo">
