--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
  <h1>Hello World</h1>
- <p>Que bom te ver por aqui, Fulano</p>
+ <p>Que bom te ver por aqui, <span id="nome-usuario"> Fulano! </span></p>
   </header>
   <section>
     <h2>HTML</h2>
@@ -29,6 +29,7 @@
 <p>Uma página desenvolvida por Alura Start</p>
 
   </footer>
+  <script src="script.js"></script>
 
 </body>
 
