--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <section>
     <h2>HTML</h2>
     <p class="texto-inglês">Hypertext Markup Language (em português, Linguagem de Marcação de Texto)...</p>        
+    <h2> Outras linguagens</h2>
+    <li id="lista"> lista</li>
+
     <h2>CSS</h2>
     <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
     <img src="Imagem/Olá Mundo (1).png" alt="texto alternativo">
