--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <h2> Outras linguagens</h2>
     <li id="lista"> lista</li>
 
+    <h2> Alunos</h2>
+    <li id="aluno"> </li>
+
     <h2>CSS</h2>
     <p>Cascading Style Sheets (em português, Folha de Estilo em Cascata)...</p>
     <img src="Imagem/Olá Mundo (1).png" alt="texto alternativo">
